kustomize/ip-tracker-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-tracker-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      # protocol: TCP
  selector:
    app.kubernetes.io/name: ip-tracker-app
