kustomize/ip-tracker-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-tracker-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "demo-workshop.bizflycloud.vn"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ip-tracker-app
                port:
                  number: 8080
